# infer-types

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
infer_types/: __init__.py  _cli.py  _constants.py  _extractors.py  _format.py  _fsig.py  _handlers.py  _helpers.py  _inferno.py  _transformer.py  _types.py
tests/: test_cli.py  test_inferno.py  test_main.py  test_transformer.py
