[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "infer_types"
authors = [
    {name = "Gram", email = "git@orsinium.dev"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version", "description"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Typing :: Typed",
]
keywords = [
    "typing",
    "annotations",
    "type annotations",
    "formatter",
    "code formatter",
]
dependencies = [
    "astroid",
    "astypes>=0.2.1",
    "typeshed_client",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
lint = [
    "flake8",
    "isort",
    "mypy",
    "types-protobuf",
    "unify",
]
[project.urls]
Source = "https://github.com/orsinium-labs/infer-types"

[tool.mypy]
files = ["infer_types"]
python_version = 3.8
ignore_missing_imports = true
# follow_imports = "silent"
show_error_codes = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
# warn_unused_ignores = true

[tool.isort]
profile = "django"
lines_after_imports = 2
skip = ".venvs/"

[tool.pytest.ini_options]
addopts = [
    "--cov=infer_types",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=91",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    "except ImportError:",
    "    pass",
]

[tool.coverage.run]
branch = true
